# gais-lab

./: .env.example  .gitignore  README.md  pyproject.toml
app/: 01_hello_llm.py  02_hello_streamlit.py  03_streamlit_form.py  04_streamlit_llm.py  05_streamlit_repurposed.py  06_monkey.py  06_streamlit_embedding_visualisation.py  07_jokes_generator.py  08_jokes_generator.py  09_joke_generator_streamlit.py  10_embedding_single.py  11_joke_generator_streamlit.py  11_streamlit_embedding_visualisation.py  12_embedding_simple_search.py  12_streamlit_todo.py  12_vector_store.py  13_streamlit_user_query.py  14_image_generator_inference.py  15_image_generator_diffuser.py  16_image_generator_streamlit.py  17_model_parameters.py  17_traced_prompt.py  18_prompt_versioning.py  19_toxicity.py  20_function_call.py  21_function_call.py  21_function_call_executed.py  22_dataframe_retrieval.py  23_embed_store.py  23_loading_pdf.py  24_splitting_pdf.py  25_rag_naive.py  26_search_relevant.py  26_vector_store.py  27_rag_pdf.py  29_rag_decomposition.py  29_retrieval_vector_store.py  30_rag_basic_db.py  30_rag_hyde.py  config.py
app/bak/: 02_assignment_llm_coder.py  07_streamlit_user_query.py  13_vector_store_streamlit.py  21_function_call.py  21_function_call_executed.py  26_rag_pdf.py
fixtures/: nais.pkl
prisma/: schema.prisma
