[tool.poetry]
name = "gais-lab"
version = "0.1.0"
description = ""
authors = ["Raymond Yeh <ray@geek.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
