[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Raymond Yeh <ray@geek.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
sentence-transformers = "^2.7.0"
langchain-community = "^0.2.0"
scipy = "^1.13.0"
streamlit = "^1.34.0"
scikit-learn = "^1.4.2"
adjusttext = "^1.1.1"
prisma = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
