[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Raymond Yeh <ray@geek.sg>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.2.11"
langchain-openai = "^0.1.7"
sentence-transformers = "^2.7.0"
langchain-community = "^0.2.0"
scipy = "^1.13.0"
streamlit = "^1.34.0"
scikit-learn = "^1.4.2"
adjusttext = "^1.1.1"
prisma = "^0.13.1"
langchainhub = "^0.1.20"
duckduckgo-search = "^6.2.3"
pypdf = "^4.3.1"
langchain-text-splitters = "^0.2.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
